[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/ricochet.gd" type="Script" id=1]
[ext_resource path="res://images/patlama.png" type="Texture" id=2]
[ext_resource path="res://animations/scenesrico.tres" type="Animation" id=3]
[ext_resource path="res://images/büyük patlama.png" type="Texture" id=4]
[ext_resource path="res://animations/boom2.tres" type="Animation" id=5]
[ext_resource path="res://sounds/Critical Hit.wav" type="AudioStream" id=6]
[ext_resource path="res://sounds/EXPLOSION SOUND.wav" type="AudioStream" id=7]

[node name="effects" type="Node2D"]
z_index = 1
script = ExtResource( 1 )

[node name="rico" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 4
hframes = 8

[node name="boom" type="Sprite" parent="."]
visible = false
z_index = 1
texture = ExtResource( 4 )
hframes = 8

[node name="ricoAnim" type="AnimationPlayer" parent="."]
playback_speed = 5.0
anims/rico = ExtResource( 3 )

[node name="boomAnim" type="AnimationPlayer" parent="."]
anims/boom = ExtResource( 5 )

[node name="ricoSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -15.0

[node name="boomSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -5.0
[connection signal="animation_finished" from="ricoAnim" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="boomAnim" to="." method="_on_boomAnim_animation_finished"]
